# zed

./: README.md
assets/settings/: default.json
crates/breadcrumbs/: Cargo.toml
crates/collab/: Cargo.toml
crates/collab_ui/: Cargo.toml
crates/command_palette/: Cargo.toml
crates/diagnostics/: Cargo.toml
crates/editor/: Cargo.toml
crates/editor/src/: editor.rs  element.rs
crates/file_finder/: Cargo.toml
crates/go_to_line/: Cargo.toml
crates/gpui/examples/: edges.rs  edges0.rs  edges1.rs
crates/gpui/src/: taffy.rs
crates/language/src/: language_settings.rs
crates/languages/: Cargo.toml
crates/markdown_preview/src/: markdown_renderer.rs
crates/outline/: Cargo.toml
crates/project/: Cargo.toml
crates/project/src/: project.rs
crates/project_panel/: Cargo.toml
crates/project_panel/src/: project_panel.rs
crates/project_symbols/: Cargo.toml
crates/quick_action_bar/: Cargo.toml
crates/recent_projects/: Cargo.toml
crates/search/: Cargo.toml
crates/storybook/src/stories/: auto_height_editor.rs
crates/tab_switcher/: Cargo.toml
crates/tasks_ui/: Cargo.toml
crates/terminal_view/: Cargo.toml
crates/terminal_view/src/: terminal_view.rs
crates/title_bar/src/: title_bar.rs
crates/vim/: Cargo.toml
crates/workspace/: Cargo.toml
crates/workspace/src/: dock.rs  item.rs  pane.rs  pane_group.rs  persistence.rs  workspace.rs
crates/workspace/src/persistence/: model.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
crates/zed/src/zed/: app_menus.rs
